css/style.css
/* ==========================
   RESET
========================== */

*{
    margin:0;
    padding:0;
    box-sizing:border-box;
}

body{
    font-family:'Manrope',sans-serif;
    background:#f8f5ef;
    color:#2f332b;
}

/* ==========================
   NAVBAR
========================== */

nav{

    width:100%;
    display:flex;
    justify-content:space-between;
    align-items:center;

    padding:20px 7%;

    position:fixed;
    top:0;
    left:0;

    z-index:1000;

    background:rgba(25,35,30,.45);

    backdrop-filter:blur(6px);
    -webkit-backdrop-filter:blur(6px);

    border-bottom:1px solid rgba(255,255,255,.10);


}

.logo{

    display:flex;

    align-items:center;

}

.logo img{

    height:200px;

    width:auto;

    display:block;

}

nav ul{

    display:flex;

    list-style:none;

    gap:40px;

}

nav a{

    color:#ffffff;

    text-decoration:none;

    font-size:15px;

    font-weight:500;

    letter-spacing:1px;

    transition:.3s;
}

.book-btn{

    border:1px solid #C7A96A;

    color:#C7A96A;

    padding:12px 28px;

    border-radius:50px;

    transition:.3s;

}

.book-btn:hover{

    background:#C7A96A;

    color:white;
}

/* ==========================
   HERO
========================== */

header{

    height:100vh;

   background-image:
linear-gradient(
rgba(0,0,0,.35),
rgba(0,0,0,.35)
),
url("../images/backgroundimage.jpg");

    background-size:cover;

    background-position:center;

    display:flex;

    flex-direction:column;

    justify-content:center;

    align-items:center;

    text-align:center;

    color:white;

    padding:0 20px;

}

header h1{

    font-family:'Cormorant Garamond',serif;

    font-size:72px;

    font-weight:500;

    max-width:900px;

}

header p{

    margin-top:25px;

    font-size:20px;

    max-width:650px;

    line-height:1.7;

}

